--- a/bloc_module/pubspec.yaml
+++ b/bloc_module/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_bloc: ^6.0.6
+  equatable: ^1.2.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
