--- a/bloc_module/pubspec.yaml
+++ b/bloc_module/pubspec.yaml
@@ -17,6 +17,7 @@ dev_dependencies:
     sdk: flutter
   flutter_bloc: ^6.0.6
   equatable: ^1.2.5
+  flutter_modular: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
