--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_bloc: ^6.0.6
   equatable: ^1.2.5
+  flutter_modular: ^2.0.1
   bloc_module:
     path: bloc_module
 
